--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,10 @@
 development:
-  adapter: async
+  adapter: redis
 
 test:
-  adapter: async
+  adapter: redis
 
 production:
   adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: kipu-deploy_production
+  # url: redis://localhost:6379/1
+  # channel_prefix: kipu-deploy_production
